Bug 168172 - Writer markdown export: images are not handled
Summary: Writer markdown export: images are not handled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-29 12:09 UTC by Miklos Vajna
Modified: 2025-09-01 14:06 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (23 bytes, text/markdown)
2025-08-29 12:09 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2025-08-29 12:09:16 UTC
Created attachment 202577 [details]
Minimal reproducer

Steps to reproduce the problem:

1. Open the attached file in Writer, a directory which has a 'test.png' in it, too.
2. Save as markdown

Expected result: an image.

Actual result: image is lost on export.
Comment 1 Commit Notification 2025-09-01 12:58:09 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fefd59b58c7d87e034fbf1c45cefa6a87ed09976

tdf#168172 sw markdown export: handle images

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.