sw/CppunitTest_sw_filter_md.mk
@@ -27,6 +27,7 @@ $(eval $(call gb_CppunitTest_use_libraries,sw_filter_md, \
     unotest \
     utl \
     svl \
+    vcl \
 ))
 
 $(eval $(call gb_CppunitTest_use_externals,sw_filter_md,\
